--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Arthur Tristram- Portfolio</title>
+    <link rel="icon" type="image/svg+xml" href="/vite-js-logo.png" />
     <style>
       html, body {
         background: #101624;
